Add new Class FilesOperation and apply enhancements